# botik

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
docs/page/: dynamic_page.md  handling_order.md  index.md  input_page.md
docs/services/: api.md  events.md  index.md  navigation.md  userbase.md
page/: index.html
page/dynamic_page/: index.html
page/handling_order/: index.html
page/input_page/: index.html
search/: search_index.json
services/: index.html
services/api/: index.html
services/events/: index.html
services/navigation/: index.html
services/userbase/: index.html
src/botik/: app.py
src/botik/api/: __init__.py  api.py  api_type.py  send_message.py
src/botik/input/: user_input.py
src/botik/input/keyboard/: keyboard_markup.py  markup_factory.py
src/botik/input/keyboard/button/: button.py  button_data.py  button_factory.py  button_function.py
src/botik/input/message_handlers/: raw_message_handlers.py
src/botik/input/message_handlers/events/: __init__.py  bot_event.py  bot_events.py  contact_share_event.py  geo_share_event.py  got_attachment_event.py
src/botik/navigation/: __init__.py  navigation.py  routing.py
src/botik/page/: input_page.py  page.py  page_data.py  page_factory.py
src/botik/templates/: button_templates.py  page_templates.py
src/botik/user/: __init__.py  storage.py  user.py  user_base.py
tests/: test_bot_event.py  test_button_templates.py  test_navigation.py  test_user_base.py
