[project]
name = "botik"
version = "0.1.1"
authors = [
    { name = "dasstyx", email = "dasstyx@example.com" },
]
description = "Botik core package"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "api",
    "framework",
    "bot",
    "messenger",
    "async",
    "botik",
]

[project.urls]
"Homepage" = "https://github.com/dasstyx/botik"
"Bug Tracker" = "https://github.com/dasstyx/botik/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"