[project]
name = "botik"
version = "0.0.1"
authors = [
    { name = "dasstyx", email = "dasstyx@gmail.com" },
]
description = "Botik core package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "api",
    "framework",
    "bot",
    "messenger",
    "async",
    "botik",
]

[project.urls]
"Documentation" = "https://botik.readthedocs.io"
"Homepage" = "https://github.com/dasstyx/botik"
"Bug Tracker" = "https://github.com/dasstyx/botik/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"